package br.unitins.tp1.dto;

public record FormatoDTO(
    Float comprimento,

    Float largura

) {
    
}
